syntax = "proto3";

package mom;

service MOMService {
  // --- Autenticación ---
  rpc Register (RegisterRequest) returns (StatusResponse);
  rpc Login (LoginRequest) returns (LoginResponse);

  // --- Tópicos ---
  rpc CreateTopic (ChannelRequest) returns (StatusResponse);
  rpc DeleteTopic (ChannelRequest) returns (StatusResponse);
  rpc ListTopics (AuthRequest) returns (ChannelListResponse);
  rpc PublishToTopic (MessageRequest) returns (StatusResponse);
  rpc SubscribeToTopic (ChannelRequest) returns (MessageListResponse);

  // --- Colas ---
  rpc CreateQueue (ChannelRequest) returns (StatusResponse);
  rpc DeleteQueue (ChannelRequest) returns (StatusResponse);
  rpc ListQueues (AuthRequest) returns (ChannelListResponse);
  rpc SendToQueue (MessageRequest) returns (StatusResponse);
  rpc ReceiveFromQueue (ChannelRequest) returns (MessageResponse);
}

// --- Autenticación ---
message RegisterRequest {
  string username = 1;
  string password = 2;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  string token = 2;
  string message = 3;
}

// --- Solicitudes básicas ---
message AuthRequest {
  string token = 1;
}

message ChannelRequest {
  string name = 1;   // nombre del tópico o cola
  string token = 2;  // usuario autenticado
}

message MessageRequest {
  string name = 1;       // nombre del tópico o cola
  string message = 2;    // contenido del mensaje
  string token = 3;
}

// --- Respuestas ---
message StatusResponse {
  bool success = 1;
  string message = 2;
}

message MessageResponse {
  string message = 1;
  bool found = 2;
}

message MessageListResponse {
  repeated string messages = 1;
  bool found = 2;
}

message ChannelListResponse {
  repeated string names = 1;
}
